Add missing variable

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ API_PORT=4000
 API_ENV=production
 API_DB_DSN=postgres://postgress@localhost/react_and_go?sslmode=disable
 API_JWT_SECRET='ThisIsNotSoSecret'
+API_TMDB_KEY=someValidApiKey
